# solana-saga

./: BUG_FIXES_SUMMARY.md  BUILD_INSTRUCTIONS.md  DECENTRALIZATION_IMPLEMENTATION.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_NOW.md  GET_TEST_USDC.md  IMPLEMENTATION_COMPLETE.md  JUPITER_AUTH_FIXED.md  NEXT_STEPS.md  PROGRAM_ID_FIX.md  PROGRESS_REPORT.md  README.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  VIDEO_GUIDE.md  WALLET_FIX_NOTES.md  WALLET_MODAL_FIXED.md  WINNING_STRATEGY.md
.vercel/: project.json
SolanaSagaMobile/: App.tsx  WALLET_FIX_NOTES.md  app.json  index.ts  package-lock.json  package.json  polyfills.ts
frontend/: build-and-install.sh  capacitor.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  idl.json  layout.tsx  loading.tsx  not-found.tsx  page.tsx  page.tsx.backup  providers.tsx
frontend/components/: AIAnalyst.tsx  ArcadeModal.tsx  Background.tsx  BetSuccessModal.tsx  Confetti.tsx  Footer.tsx  GameOverlay.tsx  HypeHUD.tsx  MarketCard.tsx  Navbar.tsx  PSG1Controls.tsx  QRWalletConnect.tsx  RetroGrid.tsx  SwipeableMarketStack.tsx  TransactionOverlay.tsx  WalletButton.tsx  WalletNotification.tsx  WalletProvider.tsx
frontend/files/: Achievements.tsx  Background.tsx  Features.tsx  (+12 more)
prediction-markets-contracts/: Anchor.toml  TESTING_GUIDE.md  package-lock.json
prediction-markets-contracts/programs/prediction-markets/: Cargo.toml
prediction-markets-contracts/programs/prediction-markets/src/: lib.rs
(+67 files in other folders)
